@@ -11,7 +11,7 @@
   <configure name="LIB_VERSION" value="0x673"/>
   <configure name="LIB_VERSION_NUMBER" value="6,7,3,3"/>
   <configure name="SVN_REVISION" value="5750" />
-  <configure name="RELEASE_DATE" value="2011-10-26"/>
+  <configure name="RELEASE_DATE" value="2011-10-27"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
