@@ -42,6 +42,11 @@
 #define MAGICKCORE_CODER_RELATIVE_PATH "ImageMagick-6.7.3/modules-Q16/coders"
 #endif
 
+/* ARCH specific config directory */
+#ifndef MAGICKCORE_CONFIGDIR_ARCH
+#define MAGICKCORE_CONFIGDIR_ARCH "/usr/local/lib/ImageMagick-6.7.3"
+#endif
+
 /* Directory where architecture-dependent configuration files live. */
 #ifndef MAGICKCORE_CONFIGURE_PATH
 #define MAGICKCORE_CONFIGURE_PATH "/usr/local/etc/ImageMagick/"
@@ -1164,6 +1169,11 @@
 
 /* Define if you have umem memory allocation library */
 /* #undef HasUMEM */
+
+/* ARCH specific include directory */
+#ifndef MAGICKCORE_INCLUDEDIR_ARCH
+#define MAGICKCORE_INCLUDEDIR_ARCH "/usr/local/include"
+#endif
 
 /* ImageMagick is formally installed under prefix */
 #ifndef MAGICKCORE_INSTALLED_SUPPORT
