@@ -34,7 +34,7 @@ extern "C" {
 #define MagickLibAddendum  "-3"
 #define MagickLibInterface  5
 #define MagickLibMinInterface  5
-#define MagickReleaseDate  "2011-10-26"
+#define MagickReleaseDate  "2011-10-27"
 #define MagickChangeDate   "20111102"
 #define MagickAuthoritativeURL  "http://www.imagemagick.org"
 #if defined(MAGICKCORE_OPENMP_SUPPORT)
